este es mi primer cambio
primer cambio

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ $RECYCLE.BIN/
 ._*
 
 # Files that might appear in the root of a volume
+# Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
